# local-ecosystem

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CNAME  COMMIT_MSG.txt  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  _config.yml  ai.txt  index.md  leco-cli.sh  llms-full.txt  llms.txt  robots.txt  sitemap.xml  version.json
_data/: faqs.yml  sitemap.yml
_includes/: analytics.html  faq-section.html  head-custom.html  leco-brand.html  leco-footer.html  site-lower-sections.html  structured-data.html
_layouts/: default.html
ai-stack/: README.md  ai-stack.sh  core.sh
docs/: HLD.md  (+25 more)
tools/deploy-cli/: README.md  pyproject.toml
tools/deploy-cli/leco_app/: __init__.py  __main__.py  cli.py  compose_runner.py  ecosystem_platform.py  ecosystem_registry.py  hooks_runner.py  local_cf_policy.py  local_cf_provision.py  local_cf_teardown.py  onboarding.py  paths.py  resource_plan.py  schema.py  traefik_dynamic_cleanup.py  traefik_dynamic_merge.py  traefik_dynamic_sanitize.py  traefik_fragment.py  wrangler_cf_resources.py
tools/deploy-cli/leco_app/data_import/: __init__.py  context.py  orchestrator.py  plan.py  runners.py
tools/deploy-cli/leco_app/data_import/importers/: __init__.py  cloudflare.py  files.py  mongodb.py  mysql.py  postgres.py  redis.py
tools/deploy-cli/leco_app/detectors/: __init__.py  archetype.py  compose.py  ports.py  wrangler.py
tools/deploy-cli/tests/: test_dedicated_local_adapters.py  test_ecosystem_platform.py  test_local_cf_policy.py  test_local_cf_teardown.py  test_mongodb_import_paths.py  test_wrangler_cf_resources.py
(+321 files in other folders)
